<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.auties00</groupId>
    <artifactId>reified</artifactId>
    <version>2.0</version>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>Reified methods and classes for Java</description>
    <url>https://github.com/Auties00/reified</url>
    <developers>
        <developer>
            <name>Alessandro Autiero</name>
            <email>alautiero@gmail.com</email>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>https://github.com/Auties00/reified/tree/master</url>
        <connection>scm:git:https://github.com/Auties00/reified.git</connection>
        <tag>reified-1.14</tag>
    </scm>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>sign</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <packaging>jar</packaging>

    <properties>
        <java.version>11</java.version>
        <reified.module>it.auties.reified</reified.module>
        <open.tree.module.to.reified>jdk.compiler/com.sun.tools.javac.tree=${reified.module}</open.tree.module.to.reified>
        <open.util.module.to.reified>jdk.compiler/com.sun.tools.javac.util=${reified.module}</open.util.module.to.reified>
        <open.code.module.to.reified>jdk.compiler/com.sun.tools.javac.code=${reified.module}</open.code.module.to.reified>
        <open.api.module.to.reified>jdk.compiler/com.sun.tools.javac.api=${reified.module}</open.api.module.to.reified>
        <open.comp.module.to.reified>jdk.compiler/com.sun.tools.javac.comp=${reified.module}</open.comp.module.to.reified>
        <open.jvm.module.to.reified>jdk.compiler/com.sun.tools.javac.jvm=${reified.module}</open.jvm.module.to.reified>
        <open.processing.module.to.reified>jdk.compiler/com.sun.tools.javac.processing=${reified.module}</open.processing.module.to.reified>
        <open.main.module.to.reified>jdk.compiler/com.sun.tools.javac.main=${reified.module}</open.main.module.to.reified>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service-annotations</artifactId>
            <version>1.1.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.auto.service</groupId>
                            <artifactId>auto-service</artifactId>
                            <version>1.1.1</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>${open.tree.module.to.reified}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.util.module.to.reified}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.code.module.to.reified}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.api.module.to.reified}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.comp.module.to.reified}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.jvm.module.to.reified}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.processing.module.to.reified}</arg>
                        <arg>--add-exports</arg>
                        <arg>${open.main.module.to.reified}</arg>
                    </compilerArgs>
                    <fork>true</fork>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.13</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>